# Rockcat

./: .gitignore  .gitmodules  Build.py  CMakeLists.txt  LICENSE  README.md  Rockcat.code-workspace  premake.bat  premake5.lua
Assets/: Test.json  imgui.ini
Assets/Configs/: ImGuiEditorConfigs.json  RHIBackendConfig.json  VkDescriptorLimitations.json  VkDevelopSettings.json  VkEnvConfigs.json  VkLayerAndExtensionConfigs.json
Assets/Configs/EditorThemes/: Black.json  Blue.json  Cherry.json  Cinder.json  Classic.json  ClassicDark.json  ClassicLight.json  Cosy.json  Dark.json  Dracula.json  Grey.json  Light.json
Assets/Icons/: Resource.rc
Assets/Materials/: Blit.json  BoxTextured_Texture.json  Imgui.json
Assets/Materials/BoxTextured/: Texture.material
Assets/Scenes/: RenderTest.json  RenderTest.scene  RenderTest_1.json
Assets/Settings/: Default.json
Assets/Shaders/: Algorithm.hlsli  BRDF.hlsli  BlinnPhong.frag  BlinnPhong.vert  Blit.frag  Blit.vert  DefaultLit.frag  Definitions.h  Definitions.hlsli  Definitions2.h  Definitions_1.h  DepthOnly.frag  DownsampleDepthPS.frag  GenericVS.vert  GlobalShaderCompileConfigs.json  Hierarchy-Z.comp  ImGui.frag  ImGui.vert  Math.hlsli  ResolveDepth.frag  ResolveDepth.vert  StandardPBR.frag  StandardPBR.vert  VertexInputLayout.hlsli  shadertoolsconfig.json
Assets/Shaders/Cache/: ShaderCompileConfigs.json
Assets/Shaders/StandardPBR/: Common.hlsli  FilterCube.vert  GenBRDFLut.frag  GenBRDFLut.vert  IrradianceCube.frag  PrefilterEnvmap.frag  StandardPBR.frag  StandardPBR.vert
CMake/Applications/: CMakeLists.txt
CMake/Applications/RenderTest/: CMakeLists.txt
CMake/Colorful/D3D12/: CMakeLists.txt
CMake/Colorful/IRender/: CMakeLists.txt
CMake/Colorful/Vulkan/: CMakeLists.txt
CMake/Core/: CMakeLists.txt
CMake/RHI/: CMakeLists.txt
CMake/RHI/D3D/: CMakeLists.txt
CMake/RHI/Software/: CMakeLists.txt
CMake/RHI/Vulkan/: CMakeLists.txt
CMake/Runtime/: CMakeLists.txt
Source/Applications/AdaptiveTessellation/: AdaptiveTessellation.cpp  AdaptiveTessellation.h  Main.cpp  Scanner.cpp  Scanner.h  Tessellator.cpp  Tessellator.h
Source/Applications/AlphaBlend/: AlphaBlend.cpp  AlphaBlend.h  Main.cpp
Source/Applications/Box/: Box.cpp  Box.h  Main.cpp
Source/Applications/Cubemap/: Cubemap.cpp  Cubemap.h  Main.cpp
Source/Applications/DepthStencilTest/: DepthStencilTest.cpp  DepthStencilTest.h  Main.cpp
Source/Applications/DisplacementMapping/: DisplacementMap.cpp  DisplacementMap.h  Main.cpp
Source/Applications/HDRLighting/: HDRLighting.cpp  HDRLighting.h  Main.cpp
Source/Applications/ImGuiEditor/: DX12Impl.h  ImGuiEditor.cpp  ImGuiEditor.h  ImGuiEditorTest.cpp  ImGuiEditorTest.h
Source/Applications/Lighting/: Lighting.cpp  Lighting.h  Main.cpp
Source/Applications/MultithreadedRendering/: Main.cpp  MultithreadedRendering.cpp  MultithreadedRendering.h  Scene.cpp  Scene.h
Source/Applications/ParallaxMapping/: Main.cpp  ParallaxMapping.cpp  ParallaxMapping.h
Source/Applications/ParticleSystem/: AppParticleSystem.cpp  AppParticleSystem.h  Main.cpp  ParticleSystem.cpp  ParticleSystem.h
Source/Applications/RayCast/: Main.cpp  RayCast.cpp  RayCast.h
Source/Applications/RenderTest/: RenderTest.cpp  RenderTest.h
Source/Applications/TextureAtlas/: TextureAtlas.cpp  TextureAtlas.h
Source/Colorful/D3D/: DXGI_Interface.h
Source/Colorful/IRenderer/: Declarations.h  Format.cpp  Format.h  IBuffer.h  ICommandBuffer.h  IDevice.cpp  IDevice.h  IImage.h  IPipeline.cpp  IPipeline.h  IRenderStates.h  IRenderer.cpp  IRenderer.h  IResource.h  IShader.cpp  IShader.h  Profiler.cpp  Profiler.h  RHIShader.h  RenderSettings.h  ShaderParameters.h  StagingBufferAllocator.cpp  StagingBufferAllocator.h  VertexAttributes.h
Source/Colorful/Software/: SoftwareRenderer.h
Source/Colorful/Vulkan/: DeferredMultisampling.drawio  ReadVk.md  VulkanAsync.cpp  VulkanAsync.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPool.cpp  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanLoader.cpp  VulkanLoader.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.cpp  VulkanTypes.h
Source/Core/: CpuTimer.h  Definitions.cpp  Definitions.h  Delegate.h  DirectedAcyclicGraph.h  Event.h  File.h  GUID.h  Gear.h  InputState.h  Logger.cpp  Logger.h  Module.h  ObjectID.h  Option.h  Platform.h  Serializeable.h  Singleton.h  String.cpp  String.h  Tickable.h  Window.h
Source/Core/IO/: IO.h
Source/Core/Math/: AABB.cpp  AABB.h  Color.cpp  Color.h  Euler.h  Frustum.h  Math.h  Matrix.cpp  Matrix.h  OBB.h  Plane.h  Quaternion.h  Rect.h  Sphere.h  Transform.h  Vector.cpp  Vector.h  Vector2.h  Vector3.h  Vector4.h
Source/Core/Win32/: File.cpp  Platform.cpp  Window.cpp
Source/DeadCode/: DesignPatterns.hpp  ID.h  RedBlackTree.hpp  Sort.hpp
Source/DeadCode/Learner/: DynamicProgramming.hpp  Learner.cpp  recursion.hpp  sort.hpp
Source/RHI/D3D/: DXGIInterface.cpp  DXGIInterface.h  DXGI_Interface.cpp  DXGI_Interface.h
Source/RHI/Software/: SoftwareRHI.cpp
Source/RHI/Vulkan/: VulkanAsync.cpp  VulkanAsync.h  VulkanBarrier.cpp  VulkanBarrier.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandListContext.cpp  VulkanCommandListContext.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevelopSettings.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEnvConfiguration.cpp  VulkanEnvConfiguration.h  VulkanExtensionDefines.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLayerExtensions.cpp  VulkanLoader.cpp  (+22 more)
Source/Runtime/: Application.cpp  Application.h  Commandline.cpp  Commandline.h  DelayDeleteQueue.h  EventRouter.cpp  EventRouter.h  Light.h  MessageRouter.cpp  Paths.cpp  Paths.h  Rockcat.hpp  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  System.h  Window.h
Source/Test/: Test.cpp
(+663 files in other folders)
