cmake_minimum_required(VERSION 3.0.0)

project(Rockcat)

if(WIN32)
    add_definitions(-DUNICODE -D_UNICODE)
endif()

if(MSVC)
    add_compile_options(/W4)
    #add_compile_options(/GR-)
    add_compile_options(/MP)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

function(AutoSetSourceFileFilters)
    cmake_parse_arguments(ARG "" "BasePath" "SourceFileList" ${ARGN})
    foreach(FilePath IN ITEMS ${ARG_SourceFileList})
        set(FilePathRelative "${FilePath}")
        if (IS_ABSOLUTE "${FilePath}")
            file(RELATIVE_PATH FilePathRelative "${ARG_BasePath}" "${FilePath}")
        endif()
        get_filename_component(SourcePath "${FilePathRelative}" PATH)
        string(REPLACE "/" "\\" SourcePathMsvc "${SourcePath}")
        source_group("${SourcePathMsvc}" FILES "${FilePath}")
    endforeach()
endfunction()

# macro(GetSourceFileList OutFileList TargetPath)
#   file(GLOB_RECURSE FileList RELATIVE ${TargetPath} ${TargetPath}/*)
#   SET(dirlist "")
#   FOREACH(child ${children})
#     IF(IS_DIRECTORY ${curdir}/${child})
#       LIST(APPEND dirlist ${child})
#     ENDIF()
#   ENDFOREACH()
#   SET(${result} ${dirlist})
# endmacro()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")
set(CMAKE_CONFIGURATION_TYPES Debug Release)

set(RockCatRootPath ${CMAKE_CURRENT_LIST_DIR})

function(AddPrivateIncludeDirectories)
    include_directories(${RockCatRootPath})
    include_directories(${RockCatRootPath}/Source)
    include_directories(${RockCatRootPath}/ThirdParty/cereal/include)
endfunction()

function(AddPrivateDefinitions)
    if(WIN32)
        add_definitions(-DVK_USE_PLATFORM_WIN32_KHR=1 -DPLATFORM_WIN32=1)
    endif()
endfunction()

add_subdirectory(CMake/Core)
add_subdirectory(CMake/Runtime)
add_subdirectory(CMake/Colorful/IRender)
add_subdirectory(CMake/Colorful/Vulkan)
add_subdirectory(CMake/Colorful/D3D12)
add_subdirectory(CMake/Applications/RenderTest)
add_subdirectory(CMake/ThirdParty/ImGUI)
add_subdirectory(CMake/ThirdParty/libktx)
add_subdirectory(CMake/ThirdParty/spirv-cross)
add_subdirectory(CMake/ThirdParty/assimp)
